New quote added
Included a famous quote by Layman Pang in the page

--- a/_posts/0000-01-02-hernanpl.md
+++ b/_posts/0000-01-02-hernanpl.md
@@ -2,5 +2,5 @@
 layout: slide
 title: "Welcome to our second slide!"
 ---
-Your text
+"I don’t hold on to anything, don’t reject anything; nowhere an obstacle or conflict" - Layman Pang
 Use the left arrow to go back!
